--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 	<li> Gratis Karakter, Animasi dan Background (<a 	href="https://www.freepik.com/" target="_blank">freepik</a>)</li>
 
 	<li> Mengurangi Ukuran File (<a 	href="https://tinypng.com/" target="_blank">tinypng</a>)</li>
-
+	<li> Mengubah ke GIF (<a 	href="https://ezgif.com/help/alternative-animated-image-formats" target="_blank">ezgif</a>)</li>
 	<li> Menghilangkan Background Gambar</li>
-<ol>
+<ol>https://tinypng.com
 
 <li> Warna Latar Berbeda dengan Gambar (<a 	href="https://www.unscreen.com/upload" 	target="_blank">unscreen</a>)</li>
 <li> Warna Latar Sama dengan Gambar (<a 	href="https://www.online-image-editor.com/"target="_blank">online-image-editor</a>)</li>
